# qjsonrpc

./: .gitignore  CMakeLists.txt  README.md  config.cmake.in  config.hpp.in  qjsonrpc-config.hpp.in  qjsonrpc.pro
.github/workflows/: codeql.yml
qjsonrpc/: qjson-rpc.cpp  qjson-rpc.hpp  qjsonrpc-export.hpp  stable.hpp
